@@ -1,5 +1,6 @@
-// { dg-options "-std=gnu++17" }
-// { dg-do run { target c++17 } }
+// { dg-options "-std=gnu++17 -fno-inline" }
+// { dg-do link { target c++17 } }
+// { dg-require-filesystem-ts "" }
 
 // Copyright (C) 2019 Free Software Foundation, Inc.
 //
@@ -17,9 +18,6 @@
 // You should have received a copy of the GNU General Public License along
 // with this library; see the file COPYING3.  If not see
 // <http://www.gnu.org/licenses/>.
-
-// { dg-options "-std=gnu++17 -fno-inline" }
-// { dg-do link { target c++17 } }
 
 // C++17 30.10.15 Filesystem operation functions [fs.op.funcs]
 
