@@ -1,3 +1,9 @@
+2019-02-18  Wilco Dijkstra  <wdijkstr@arm.com>
+
+	* 27_io/filesystem/operations/all.cc: Add dg-require-filesystem-ts.
+	* 27_io/filesystem/operations/resize_file.cc: Likewise.
+	* 27_io/filesystem/path/generation/normal2.cc: Likewise.
+
 2019-02-14  Jonathan Wakely  <jwakely@redhat.com>
 
 	* doc/xml/manual/status_cxx2020.xml: Update P0887R1 status.
